{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 86,
  "lineage": "89542c03-525b-9474-2c7a-f4cc50a7bb31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07251f912d2a831a3",
            "arn": "arn:aws:ec2:us-east-2:733026618622:instance/i-099396ff90e06dff8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099396ff90e06dff8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c34f8af71b400f4",
            "private_dns": "ip-10-20-20-6.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.6",
            "public_dns": "ec2-3-22-51-195.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.51.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0814e24bff542d0dd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aad1b95c8e388258",
            "tags": {
              "Name": "app-server-1"
            },
            "tags_all": {
              "Name": "app-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad8bc31bc26f25da"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07251f912d2a831a3",
            "arn": "arn:aws:ec2:us-east-2:733026618622:instance/i-00d74bde44be3f055",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d74bde44be3f055",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e68974ba4b1b1e2",
            "private_dns": "ip-10-20-20-25.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.25",
            "public_dns": "ec2-18-217-78-17.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.78.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06598c86b5e680320",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0aadffe7d4739ca",
            "tags": {
              "Name": "app-server-2"
            },
            "tags_all": {
              "Name": "app-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad8bc31bc26f25da"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2b",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07251f912d2a831a3",
            "arn": "arn:aws:ec2:us-east-2:733026618622:instance/i-00f20464d8894b65b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f20464d8894b65b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ecf7220dc7df16bc",
            "private_dns": "ip-10-20-20-36.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.36",
            "public_dns": "ec2-3-137-148-197.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.148.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff2bb74b7464a181",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a388375d8b6189e5",
            "tags": {
              "Name": "app-server-3"
            },
            "tags_all": {
              "Name": "app-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad8bc31bc26f25da"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2c",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:internet-gateway/igw-044fa579523bfea3f",
            "id": "igw-044fa579523bfea3f",
            "owner_id": "733026618622",
            "tags": {
              "Name": "Application-1-gateway"
            },
            "tags_all": {
              "Name": "Application-1-gateway"
            },
            "vpc_id": "vpc-0135763b3e5c17aff"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:loadbalancer/app/front/e00e5d2668e0e0fd",
            "arn_suffix": "app/front/e00e5d2668e0e0fd",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-1776719125.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:loadbalancer/app/front/e00e5d2668e0e0fd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ad8bc31bc26f25da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a388375d8b6189e5"
              },
              {
                "subnet_id": "subnet-0aad1b95c8e388258"
              },
              {
                "subnet_id": "subnet-0c0aadffe7d4739ca"
              }
            ],
            "subnets": [
              "subnet-0a388375d8b6189e5",
              "subnet-0aad1b95c8e388258",
              "subnet-0c0aadffe7d4739ca"
            ],
            "tags": {
              "Environment": "front"
            },
            "tags_all": {
              "Environment": "front"
            },
            "vpc_id": "vpc-0135763b3e5c17aff",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_subnet.private-2b",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:listener/app/front/e00e5d2668e0e0fd/2ebd4941b1f8da64",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:listener/app/front/e00e5d2668e0e0fd/2ebd4941b1f8da64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:loadbalancer/app/front/e00e5d2668e0e0fd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_subnet.private-2b",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029",
            "arn_suffix": "targetgroup/application-front/b9106ef7a5f52029",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "application-front",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0135763b3e5c17aff"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029-20230111132320536600000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029",
            "target_id": "i-099396ff90e06dff8"
          },
          "dependencies": [
            "aws_instance.app-server1",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029-20230111132310505700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029",
            "target_id": "i-00d74bde44be3f055"
          },
          "dependencies": [
            "aws_instance.app-server2",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2b",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029-20230111132310324400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/b9106ef7a5f52029",
            "target_id": "i-00f20464d8894b65b"
          },
          "dependencies": [
            "aws_instance.app-server3",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2c",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-044fa579523bfea3f",
            "id": "r-rtb-08522e553a22c0e6d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08522e553a22c0e6d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this-igw",
            "aws_route_table.this-rt",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:route-table/rtb-08522e553a22c0e6d",
            "id": "rtb-08522e553a22c0e6d",
            "owner_id": "733026618622",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Application-1-route-table"
            },
            "tags_all": {
              "Name": "Application-1-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0135763b3e5c17aff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04078eacd114b3176",
            "route_table_id": "rtb-08522e553a22c0e6d",
            "subnet_id": "subnet-0aad1b95c8e388258"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a42ee2ef656fb5f",
            "route_table_id": "rtb-08522e553a22c0e6d",
            "subnet_id": "subnet-0c0aadffe7d4739ca"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfa1fc13c69fa598",
            "route_table_id": "rtb-08522e553a22c0e6d",
            "subnet_id": "subnet-0a388375d8b6189e5"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:security-group/sg-0ad8bc31bc26f25da",
            "description": "allow inbound http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad8bc31bc26f25da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "from my ip range",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_access",
            "name_prefix": "",
            "owner_id": "733026618622",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application-1-sg"
            },
            "tags_all": {
              "Name": "Application-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0135763b3e5c17aff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:subnet/subnet-0aad1b95c8e388258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.20.20.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aad1b95c8e388258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733026618622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2a"
            },
            "tags_all": {
              "Name": "Application-1-private-2a"
            },
            "vpc_id": "vpc-0135763b3e5c17aff"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:subnet/subnet-0c0aadffe7d4739ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.20.20.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0aadffe7d4739ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733026618622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2b"
            },
            "tags_all": {
              "Name": "Application-1-private-2b"
            },
            "vpc_id": "vpc-0135763b3e5c17aff"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:subnet/subnet-0a388375d8b6189e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.20.20.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a388375d8b6189e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733026618622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2c"
            },
            "tags_all": {
              "Name": "Application-1-private-2c"
            },
            "vpc_id": "vpc-0135763b3e5c17aff"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:vpc/vpc-0135763b3e5c17aff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.20.0/26",
            "default_network_acl_id": "acl-09df2c1686534d2eb",
            "default_route_table_id": "rtb-0d0dc249de7141989",
            "default_security_group_id": "sg-0ee28a40a74989109",
            "dhcp_options_id": "dopt-02d31a5d210bcf2db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0135763b3e5c17aff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0dc249de7141989",
            "owner_id": "733026618622",
            "tags": {
              "Name": "Application-1"
            },
            "tags_all": {
              "Name": "Application-1"
            }
          }
        }
      ]
    }
  ]
}